; ModuleID = '/home/carl/AnghaBench/ios-webkit-debug-proxy/examples/extr_ws_echo2.c_on_close.c'
source_filename = "/home/carl/AnghaBench/ios-webkit-debug-proxy/examples/extr_ws_echo2.c_on_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SM_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @on_close(i32 %0, i32 %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load i32, i32* %8, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %15, label %11

11:                                               ; preds = %4
  %12 = load i8*, i8** %7, align 8
  %13 = ptrtoint i8* %12 to i32
  %14 = call i32 @my_free(i32 %13)
  br label %15

15:                                               ; preds = %11, %4
  %16 = load i32, i32* @SM_SUCCESS, align 4
  ret i32 %16
}

declare dso_local i32 @my_free(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
